Kernel OTP manager added.  Bug fixes.

--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/kernel-qa.properties
@@ -97,13 +97,14 @@ auth.refreshtoken.header=RefreshToken
 auth.jwt.refresh.expiry=86400000
 auth.primary.language=eng
 
-otp.manager.api.generate=http://kernel-otpmanager-service:8085/v1/otpmanager/otp/generate
-otp.manager.api.verify=http://kernel-otpmanager-service:8085/v1/otpmanager/otp/validate
-otp.sender.api.email.send=http://kernel-emailnotification-service:8083/v1/emailnotifier/email/send
-otp.sender.api.sms.send=http://kernel-smsnotification-service:8084/v1/smsnotifier/sms/send
+otp.manager.base.url=http://kernel-otpmanager-service
+otp.manager.api.generate=${otp.manager.base.url}/v1/otpmanager/otp/generate
+otp.manager.api.verify=${otp.manager.base.url}/v1/otpmanager/otp/validate
+otp.sender.api.email.send=http://kernel-emailnotification-service/v1/emailnotifier/email/send
+otp.sender.api.sms.send=http://kernel-smsnotification-service/v1/smsnotifier/sms/send
 masterdata.api.template=http://kernel-masterdata-service/v1/masterdata/templates/
 masterdata.api.template.otp=/otp-sms-template
-idrepo.api.getuindetails=http://id-repository-identity-service:8090/idrepository/v1/identity/uin/{uin}
+idrepo.api.getuindetails=http://id-repository-identity-service/idrepository/v1/identity/uin/{uin}
 
 datastores=ldap_1_DS,db_1_DS,db_2_DS
 
@@ -313,17 +314,15 @@ mosip.kernel.realm-id=mosip
 mosip.admin_realm_id=mosip
 mosip.master.realm-id=master
 
-mosip.kernel.open-id-url=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}/protocol/openid-connect/
-mosip.kernel.base-url=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}
+mosip.kernel.base-url=${mosip.keycloak.base-url}/auth/admin/realms/{realmId}
 mosip.kernel.admin-url=${mosip.keycloak.base-url}/auth/admin/
-mosip.kernel.roles-url=realms/${mosip.kernel.realm-id}/roles
-mosip.kernel.users-url=realms/${mosip.kernel.realm-id}/users
+mosip.kernel.roles-url=realms/mosip/roles
+mosip.kernel.users-url=realms/mosip/users
 mosip.kernel.role-user-mapping-url=/{userId}/role-mappings/realm
 
-mosip.authmanager.base-url=${mosip.keycloak.base-url}/v1/authmanager
+mosip.authmanager.base-url=http://kernel-auth-service/v1/authmanager
 
-mosip.keycloak.authorization_endpoint=${mosip.keycloak.base-url}/auth/realms/${mosip.kernel.realm-id}/protocol/openid-connect/auth
-mosip.keycloak.token_endpoint=${mosip.keycloak.base-url}/auth/realms/mosip/protocol/openid-connect/token
+mosip.keycloak.token_endpoint=${mosip.keycloak.base-url}/auth/realms/{realmId}/protocol/openid-connect/token
 mosip.admin.login_flow.name=authorization_code
 mosip.admin.login_flow.response_type=code
 mosip.admin.login_flow.scope=cls
@@ -345,8 +344,8 @@ mosip.keycloak.admin.user.id=admin
 mosip.keycloak.admin.secret.key=admin
 
 
-mosip.kernel.open-idurl=https://${mosip.keycloak.base-url}/auth/realms/{realmId}/protocol/openid-connect/
-mosip.kernel.baseurl=https://${mosip.keycloak.base-url}/auth/admin/realms/{realmId}
+mosip.kernel.open-idurl=${mosip.keycloak.base-url}/auth/realms/{realmId}/protocol/openid-connect/
+mosip.kernel.baseurl=${mosip.keycloak.base-url}/auth/admin/realms/{realmId}
 mosip.keycloak.authorization_endpoint=${mosip.keycloak.base-url}/auth/realms/{realmId}/protocol/openid-connect/auth
 mosip.kernel.prereg.realm-id=preregistration
 mosip.kernel.prereg.client.id=mosip-pre-registration-client
