[MOSIP-257] Restructuring of keycloak for external access.

--- a/deployment/sandbox-v2/app/host_vars/console.yml
+++ b/deployment/sandbox-v2/app/host_vars/console.yml
@@ -19,3 +19,5 @@ keycloak_password: admin
 docker_wait_time: 600   # Wait for docker to pull and deploy
 
 ingress_ip: 10.6.1.125
+
+mosip_public_server: 175.100.151.53
