--- a/deployment/sandbox-v2/app/roles/keycloak/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/defaults/main.yml
@@ -1,4 +1,4 @@
 keycloak_user: admin  # Should match mosip.keycloak.admin.user.id in mosip config properites
 keycloak_password: admin # Should match  mosip.keycloak.admin.secret.key in mosip config properties
-keycloak_url: 'http://{{ingress_ip}}'
-
+keycloak_url: 'http://{{ingress_ip}}/keycloak' # To acces Keycloak from outside cluster but within network. Refer ingress file.
+keycloak_external_url: 'http://{{mosip_public_server}}/keycloak/auth'  # Should match with Nginx conf
