--- a/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-demographic/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-demographic/defaults/main.yml
@@ -1,4 +1,4 @@
 pre_reg_demographic_name: pre-registration-demographic-service 
-pre_reg_demographic_version: 1.0.6-SNAPSHOT.73 
+pre_reg_demographic_version: 1.0.7
 pre_reg_demographic_image: mosipid/pre-registration-demographic-service
 pre_reg_demographic_container_port: 9092
