--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -12,21 +12,21 @@
      - {role: ingress, tags: ingress} 
 
      # Kernel  
-     - {role: kernel/kernel-auth, tags: kernel-auth}  
-     - {role: kernel/kernel-auditmanager, tags: kernel-audit} 
-     - {role: kernel/kernel-masterdata, tags: kernel-masterdata} 
-     - {role: kernel/kernel-emailnotification, tags: kernel-emailnotification}
-     - {role: kernel/kernel-otp, tags: kernel-otp}
+     - {role: kernel/kernel-auth, tags: [kernel-auth, kernel]}  
+     - {role: kernel/kernel-auditmanager, tags: [kernel-audit, kernel]} 
+     - {role: kernel/kernel-masterdata, tags: [kernel-masterdata, kernel]} 
+     - {role: kernel/kernel-emailnotification, tags: [kernel-emailnotification, kernel]}
+     - {role: kernel/kernel-otp, tags: [kernel-otp, kernel]}
 
      # Pre-Reg
-     - {role: pre-reg/pre-reg-login, tags: pre-reg-login}
-     - {role: pre-reg/pre-reg-demographic, tags: pre-reg-demographic}
-     - {role: pre-reg/pre-reg-notification, tags: pre-reg-notification}
-     - {role: pre-reg/pre-reg-booking, tags: pre-reg-booking}
-     - {role: pre-reg/pre-reg-datasync, tags: pre-reg-datasync}
-     - {role: pre-reg/pre-reg-document, tags: pre-reg-document}
-     - {role: pre-reg/pre-reg-generateqrcode, tags: pre-reg-generateqrcode}
-     - {role: pre-reg/pre-reg-translitration, tags: pre-reg-translitration}
-     - {role: pre-reg/pre-reg-batchjob, tags: pre-reg-batchjob}
-     - {role: pre-reg/pre-reg-ui, tags: pre-reg-ui}
+     - {role: pre-reg/pre-reg-login, tags: [pre-reg-login, pre-reg]}
+     - {role: pre-reg/pre-reg-demographic, tags: [pre-reg-demographic, pre-reg]}
+     - {role: pre-reg/pre-reg-notification, tags: [pre-reg-notification, pre-reg]}
+     - {role: pre-reg/pre-reg-booking, tags: [pre-reg-booking, pre-reg]}
+     - {role: pre-reg/pre-reg-datasync, tags: [pre-reg-datasync, pre-reg]}
+     - {role: pre-reg/pre-reg-document, tags: [pre-reg-document, pre-reg]}
+     - {role: pre-reg/pre-reg-generateqrcode, tags: [pre-reg-generateqrcode, pre-reg]}
+     - {role: pre-reg/pre-reg-translitration, tags: [pre-reg-translitration, pre-reg]}
+     - {role: pre-reg/pre-reg-batchjob, tags: [pre-reg-batchjob, pre-reg]}
+     - {role: pre-reg/pre-reg-ui, tags: [pre-reg-ui, pre-reg]}
 
