--- a/deployment/sandbox-v2/app/roles/ingress/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/ingress/tasks/main.yml
@@ -24,6 +24,13 @@
      src: k8s_ingress.yml.j2
      dest: '{{tmp_dir}}/k8s_ingress.yml'
 
+- name: First delete previous ingress # TODO: For some reason ingress changes are not applied otherwise 
+  k8s:
+    state: absent
+    src: '{{tmp_dir}}/k8s_ingress.yml'
+    wait: 'yes'
+    wait_timeout: 240 
+
 - name: Deploy ingress rules
   k8s:
     state: present
