--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak-init/defaults/main.yml
@@ -7,7 +7,8 @@ keycloak_mosip_realms:
 keycloak_mosip_clients:
   - {realm_id: 'mosip', client_id: 'mosip-admin-client', secret: 'xyz123'}  
   - {realm_id: 'mosip', client_id: 'mosip-auth-client', secret: 'abc123'}  
-  - {realm_id: 'mosip', client_id: 'mosip-pre-registration-client', secret: 'abc123'} 
+  - {realm_id: 'mosip', client_id: 'mosip-pre-registration-client', secret: 'abc123'}  # TODO: To be removed later after client-realm bugfix.
+  - {realm_id: 'preregistration', client_id: 'mosip-pre-registration-client', secret: 'abc123'} 
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
