--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/defaults/main.yml
@@ -1,3 +1,4 @@
+keycloak_name: keycloak
 keycloak_user: admin  # Should match mosip.keycloak.admin.user.id in mosip config properites
 keycloak_password: admin # Should match  mosip.keycloak.admin.secret.key in mosip config properties
 keycloak_url: 'http://{{ingress_ip}}/keycloak' # To acces Keycloak from outside cluster but within network. Refer ingress file.
