--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -3,7 +3,10 @@
   gather_facts: false
   # Note: we have put tags here to run roles individually if needed.
   roles:
-     # Base infra
+     # Prerequistes 
+     - {role: prerequisites, tags: [never, one-time]}
+
+     # Base MOSIP infra
      - {role: postgres/postgres, tags: postgres}
      - {role: postgres/postgres-init, tags: postgres-init} # Depends on postgres
      - {role: config-server, tags: config-server} 
