[MOSIP-438] Pre Reg bug fixes.

--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/kernel-qa.properties
@@ -15,7 +15,7 @@ mosip.kernel.syncdata.syncdata-version-id=v1.0
 mosip.kernel.syncdata.registration-center-config-file=registration-${spring.profiles.active}.properties
 # Name of the file that is present in the config server which has global config.
 mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
-mosip.kernel.syncdata.syncjob-base-url=http://kernel-syncjob-service:8099/v1/syncjob/syncjobdef
+mosip.kernel.syncdata.syncjob-base-url=http://kernel-syncjob-service/v1/syncjob/syncjobdef
 
 
 #------------------------------------sms notification service-------------------------------
