--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/pre-registration-qa.properties
@@ -146,7 +146,7 @@ validationStatus=success
 context=auth-otp
 # Both below fields must match with what is there on Keycloak
 clientId=mosip-pre-registration-client
-secretKey=abc123
+secretKey=39879f5b-ce40-4ca4-a40b-33f4f3b5a0e1
 
 auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 
@@ -286,13 +286,13 @@ mosip.preregistration.booking.exception.id=mosip.preregistration.booking.parse.e
 # ----------- BatchJob--------
 
 # Determines application id for batch job authenticaion
-mosip.batch.token.authmanager.appId=pre-registration
+mosip.batch.token.authmanager.appId=preregistration
 
 # Determines user name for batch job authenticaion
 mosip.batch.token.authmanager.userName=mosip-pre-registration-client
 
 # Determines password for batch job authenticaion
-mosip.batch.token.authmanager.password=abc123
+mosip.batch.token.authmanager.password=39879f5b-ce40-4ca4-a40b-33f4f3b5a0e1
 
 # Determines URL for batch job authenticaion
 mosip.batch.token.authmanager.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}/authenticate/clientidsecretkey
