--- a/deployment/sandbox-v2/app/roles/nginx/files/nginx.conf
+++ b/deployment/sandbox-v2/app/roles/nginx/files/nginx.conf
@@ -23,18 +23,27 @@ server {
         proxy_pass http://10.6.1.125/keycloak/auth/;
         }
 
-     location /preregistration/v1/login {
+     location /preregistration/v1/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/preregistration/v1/login;
+        proxy_pass http://10.6.1.125/preregistration/v1/;
         }
-     location /v1/authmanager/ {
+     location /pre-registration-ui/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/v1/authmanager/;
+        proxy_pass http://10.6.1.125/pre-registration-ui/;
         }
+
+     location /v1/masterdata/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://10.6.1.125/v1/masterdata/;
+        }
+
 }
