[MOSIP-579] adding ansible script for  hdfs

--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -4,7 +4,7 @@
   # Note: we have put tags here to run roles individually if needed.
   roles:
      # Prerequistes 
-     - {role: prerequisites, tags: [never, one-time]}
+     - {role: prerequisites/hadoop, tags: hadoop}
 
      # Base MOSIP infra
      - {role: postgres/postgres, tags: postgres}
