--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -4,7 +4,7 @@
   # Note: we have put tags here to run roles individually if needed.
   roles:
      # Prerequistes 
-     - {role: prerequisites/hadoop, tags: hadoop}
+     - {role: prerequisites, tags: [never, one-time]}
 
      # Base MOSIP infra
      - {role: postgres/postgres, tags: postgres}
@@ -12,7 +12,8 @@
      - {role: config-server, tags: config-server} 
      - {role: keycloak/keycloak, tags: keycloak} # Depends on postgres 
      - {role: keycloak/keycloak-init, tags: keycloak-init} # Depends on keycloak
-     - {role: ingress, tags: ingress} 
+     - {role: ingress, tags: ingress}
+     - {role: hdfs, tags: hdfs} 
 
      # Kernel  
      - {role: kernel/kernel-auth, tags: [kernel-auth, kernel]}  
