--- a/deployment/sandbox-v2/app/roles/ingress/files/k8s_ingress_init.yml
+++ b/deployment/sandbox-v2/app/roles/ingress/files/k8s_ingress_init.yml
@@ -16,6 +16,8 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
+data: 
+  proxy-buffer-size: "32k" # NOTE: Auth header reponse is huge, nginx was giving 502 error otherwise
 
 ---
 kind: ConfigMap
