--- a/deployment/sandbox-v2/app/roles/kernel/kernel-prid/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-prid/tasks/main.yml
@@ -2,13 +2,13 @@
 # Deploy on kubernetes 
 - name: Get yml from template 
   template:
-     src: k8s_pre_reg_translitration.yml.j2
-     dest: '{{tmp_dir}}/k8s_pre_reg_translitration.yml'
+     src: k8s_kernel_prid.yml.j2
+     dest: '{{tmp_dir}}/k8s_kernel_prid.yml'
 
 - name: Deploy on kurbernetes
   k8s:
     state: present
-    src: '{{tmp_dir}}/k8s_pre_reg_translitration.yml'
+    src: '{{tmp_dir}}/k8s_kernel_prid.yml'
     wait: 'yes'
     wait_timeout: '{{docker_wait_time}}' 
 
