--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
@@ -16,4 +16,4 @@
     state: present
     src: '{{tmp_dir}}/k8s_keycloak.yml'
     wait: 'yes'
-    wait_timeout: 240 
+    wait_timeout: '{{docker_wait_time}}'
