--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -17,12 +17,14 @@
 
      # Kernel  
      - {role: kernel/kernel-auth, tags: [kernel-auth, kernel]}  
-     - {role: kernel/kernel-auditmanager, tags: [kernel-audit, kernel]} 
+     - {role: kernel/kernel-audit, tags: [kernel-audit, kernel]} 
      - {role: kernel/kernel-masterdata, tags: [kernel-masterdata, kernel]} 
-     - {role: kernel/kernel-emailnotification, tags: [kernel-emailnotification, kernel]}
+     - {role: kernel/kernel-email, tags: [kernel-email, kernel]}
      - {role: kernel/kernel-otp, tags: [kernel-otp, kernel]}
      - {role: kernel/kernel-prid, tags: [kernel-prid, kernel]}
      - {role: kernel/kernel-crypto, tags: [kernel-crypto, kernel]}
+     - {role: kernel/kernel-key, tags: [kernel-key, kernel]}
+     - {role: kernel/kernel-applicant, tags: [kernel-applicant, kernel]}
 
      # Pre-Reg
      - {role: pre-reg/pre-reg-login, tags: [pre-reg-login, pre-reg]}
