[MOSIP-438] Properties updated.

--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/application-qa.properties
@@ -1,21 +1,20 @@
 #---------------------------------------Common properties-----------------------
-mosip.base.url=http://ourownnet
-
 
 #Kernel-idobjectalidator
 # Plug in property source as either 'LOCAL' or 'CONFIG_SERVER' or 'APPLICATION_CONTEXT' through this key
 mosip.kernel.idobjectvalidator.property-source=APPLICATION_CONTEXT
-mosip.kernel.idobjectvalidator.schema-name=mosip-identity-json-schema.json
+mosip.kernel.idobjectvalidator.schema-name=mosip-identity-json-schema-qa.json
 mosip.kernel.idobjectvalidator.file-storage-uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
 mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable=NA
 
-mosip.kernel.idobjectvalidator.masterdata.languages.rest.uri=${mosip.base.url}/v1/masterdata/languages
-mosip.kernel.idobjectvalidator.masterdata.gendertypes.rest.uri=${mosip.base.url}/v1/masterdata/gendertypes
-mosip.kernel.idobjectvalidator.masterdata.documentcategories.rest.uri=${mosip.base.url}/v1/masterdata/documentcategories
-mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=${mosip.base.url}/v1/masterdata/documenttypes/{documentcategorycode}/{langcode}
-mosip.kernel.idobjectvalidator.masterdata.locations.rest.uri=${mosip.base.url}/v1/masterdata/locations/{langcode}
-mosip.kernel.idobjectvalidator.masterdata.locationhierarchy.rest.uri=${mosip.base.url}/v1/masterdata/locations/locationhierarchy/{hierarchyname}
-mosip.kernel.idobjectvalidator.masterdata.individualtypes.rest.uri=${mosip.base.url}/v1/masterdata/individualtypes
+mosip.masterdata.base.url = http://kernel-masterdata-service
+mosip.kernel.idobjectvalidator.masterdata.languages.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/languages
+mosip.kernel.idobjectvalidator.masterdata.gendertypes.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/gendertypes
+mosip.kernel.idobjectvalidator.masterdata.documentcategories.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/documentcategories
+mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/documenttypes/{documentcategorycode}/{langcode}
+mosip.kernel.idobjectvalidator.masterdata.locations.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/locations/{langcode}
+mosip.kernel.idobjectvalidator.masterdata.locationhierarchy.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/locations/locationhierarchy/{hierarchyname}
+mosip.kernel.idobjectvalidator.masterdata.individualtypes.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/individualtypes
 
 mosip.kernel.idobjectvalidator.mandatory-attributes.id-repository.new-registration=fullName,dateOfBirth|age,gender,addressLine1,region,province,city,zone,postalCode,residenceStatus,referenceIdentityNumber
 mosip.kernel.idobjectvalidator.mandatory-attributes.pre-registration.new-registration=fullName,dateOfBirth|age,gender,addressLine1,region,province,city,zone,postalCode,residenceStatus,referenceIdentityNumber
@@ -232,10 +231,11 @@ mosip.kernel.crypto.hash-iteration=100000
 #Sign algo name
 mosip.kernel.crypto.sign-algorithm-name=RS256
 
-mosip.kernel.keymanager-service-publickey-url=${mosip.base.url}/v1/keymanager/publickey/{applicationId}
-mosip.kernel.keymanager-service-decrypt-url=${mosip.base.url}/v1/keymanager/decrypt
-mosip.kernel.keymanager-service-auth-decrypt-url=${mosip.base.url}/v1/keymanager/auth/decrypt
-mosip.kernel.keymanager-service-sign-url=${mosip.base.url}/v1/keymanager/sign
+mosip.keymanager.base.url=http://kernel-keymanager-service
+mosip.kernel.keymanager-service-publickey-url=${mosip.keymanager.base.url}/v1/keymanager/publickey/{applicationId}
+mosip.kernel.keymanager-service-decrypt-url=${mosip.keymanager.base.url}/v1/keymanager/decrypt
+mosip.kernel.keymanager-service-auth-decrypt-url=${mosip.keymanager.base.url}/v1/keymanager/auth/decrypt
+mosip.kernel.keymanager-service-sign-url=${mosip.keymanager.base.url}/v1/keymanager/sign
 mosip.sign.applicationid=KERNEL
 mosip.sign.refid=SIGN
 mosip.kernel.cryptomanager.request_id=CRYPTOMANAGER.REQUEST
@@ -288,22 +288,12 @@ mosip.kernel.virus-scanner.port=3310
 
 
 #-------------------------------FS Adapter- HDFS -------------------------------
-# Name node url for HDFS - Non Secured
-#mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://13.71.115.204:51000
-# Name node url for HDFS - Secured (auth enabled)
-mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://172.16.17.4:9000
-# Enable if hadoop security authorization is 'true', default is false
+mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://hdfs:9000
 mosip.kernel.fsadapter.hdfs.authentication-enabled=false
-# HDFS log level. Change this to debug to see hdfs logs
-logging.level.org.apache.hadoop=warn
 # If HDFS is security is configured with Kerberos, Key Distribution Center domain
 mosip.kernel.fsadapter.hdfs.kdc-domain=HDFSKERBEROS1.SOUTHINDIA.CLOUDAPP.AZURE.COM
-# Username to access hdfs. Change this to application username (regprocessor,prereg or idrepo)
-#mosip.kernel.fsadapter.hdfs.user-name=mosipuser
-#keytab file path, must be set if authentication-enable is true
-#read keytab file both classpath and physical path ,append appropriate prefix
-#for classpath prefix classpath:mosip.keytab
-#for physical path prefix file:/home/keys/mosip.keytab
+# HDFS log level. Change this to debug to see hdfs logs
+logging.level.org.apache.hadoop=warn
 mosip.kernel.fsadapter.hdfs.keytab-file=classpath:mosip.keytab
 
 
@@ -343,10 +333,6 @@ mosip.min-digit-longitude-latitude=4
 mosip.kernel.filtervalue.max_columns=20
 
 auth.server.admin.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
-
-#-------------------Encryption and Decryption---------------------------
-#mosip.kernel.encrypt.url=${mosip.base.url}/v1/keymanager/encrypt
-#mosip.kernel.decrypt.url=${mosip.base.url}/v1/keymanager/decrypt
 
 #------------------PDF Genration-----------------------------------------
 mosip.kernel.pdf_owner_password=Mosip@dev123
