--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/kernel-qa.properties
@@ -231,8 +231,10 @@ audit_database_password=Mosip@dev123
 
 #Database mappings masterdata
 masterdata_database_url=jdbc:postgresql://${mosip.kernel.database.hostname}:${mosip.kernel.database.port}/mosip_master
-masterdata_database_username=masteruser
-masterdata_database_password=Mosip@dev123
+#masterdata_database_username=masteruser
+#masterdata_database_password=Mosip@dev123
+masterdata_database_username=sysadmin
+masterdata_database_password=Mosipadm@dev123
 
 
 #Database mappings uin
