--- a/deployment/sandbox-v2/app/roles/nginx/files/nginx.conf
+++ b/deployment/sandbox-v2/app/roles/nginx/files/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen       80 default_server;
     listen       [::]:80 default_server;
+    listen       81; 
     listen       443 ssl;
     server_name  mosip-tf.technoforte.co.in;
     #ssl on;
@@ -13,6 +14,8 @@ server {
     add_header Set-Cookie cip=$remote_addr;
     add_header Set-Cookie chost=$Host;
     error_log /var/log/nginx/error.log debug;
+    proxy_buffers 8 16k;
+    proxy_buffer_size 32k;
 
      location /keycloak/auth {
         proxy_set_header Host $host;
@@ -44,6 +47,22 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://10.6.1.125/v1/masterdata/;
+        }
+
+     location /v1/authmanager/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://10.6.1.125/v1/authmanager/;
+        }
+
+     location /v1/applicanttype/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://10.6.1.125/v1/applicanttype/;
         }
 
 }
