Minor cleanup. Unnecessary comments removed

--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/pre-registration-qa.properties
@@ -65,7 +65,10 @@ masterdata.service.version=v1
 masterdata.service.env=http://kernel-masterdata-service
 masterdata.service.contextpath=masterdata
 masterdata.resource.url=${masterdata.service.env}/${masterdata.service.version}/${masterdata.service.contextpath}
-
+regCenter.url=${masterdata.resource.url}/registrationcenters
+holiday.url=${masterdata.resource.url}/getregistrationcenterholidays/
+holiday.exceptional.url=${masterdata.resource.url}/exceptionalholidays
+working.day.url=${masterdata.resource.url}/workingdays
 
 # Email service
 email.service.env=http://kernel-emailnotification-service
@@ -108,11 +111,9 @@ context=auth-otp
 
 # Both below fields must match with what is there on Keycloak
 clientId=mosip-pre-registration-client
-secretKey=39879f5b-ce40-4ca4-a40b-33f4f3b5a0e1
+secretKey=abc123
 
 auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
-
-
 
 mosip.kernel.idobjectvalidator.masterdata.documentcategories.lang.rest.uri=${masterdata.resource.url}/documentcategories/{langcode}
 mosip.kernel.idobjectvalidator.masterdata.languages.rest.uri=${masterdata.resource.url}/languages
@@ -122,77 +123,48 @@ mosip.kernel.idobjectvalidator.masterdata.documenttypes.rest.uri=${masterdata.re
 mosip.kernel.idobjectvalidator.masterdata.locations.rest.uri=${masterdata.resource.url}/locations/{langcode}
 mosip.kernel.idobjectvalidator.masterdata.locationhierarchy.rest.uri=${masterdata.resource.url}/locations/locationhierarchy/{hierarchyname} 
 mosip.kernel.idobjectvalidator.masterdata.documentcategories.lang.rest.uri=${masterdata.resource.url}/documentcategories/{langcode}
-#Pre-reg identity config file name
+mosip.kernel.idobjectvalidator.referenceValidator=io.mosip.kernel.idobjectvalidator.impl.IdObjectReferenceValidator
 preregistartion.config.identityjson=PreRegistrationIdentitiyMapping.json
 
-mosip.kernel.idobjectvalidator.referenceValidator=io.mosip.kernel.idobjectvalidator.impl.IdObjectReferenceValidator
-
-#Prid service call
+#Prid 
 mosip.io.prid.url=${kernel.prid.env}/${masterdata.service.version}/${kernel.prid.contextpath}/prid
 
-# ----------- Document -------------
-
-# masterdata url to get doctype and catcode
 mosip.kernel.masterdata.validdoc.rest.uri=${masterdata.resource.url}/validdocuments/{langcode}
 
-#File size configuration
+# Document 
+# Maximum size of file allowed uploaded in document service api (in mb)
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
-
-# Determines maximum size of file allowed uploaded in document service api (in mb)
 max.file.size=2
-
-# Determines file extension allowed for document service api
 preregistration.document.extention=PDF,JPEG,PNG,JPG
-mosip.kernel.fsadapter.hdfs.user-name=prereg
-
-#id for document upload
 mosip.preregistration.document.upload.id=mosip.pre-registration.document.upload
-#id for document copy
 mosip.preregistration.document.copy.id=mosip.pre-registration.document.copy
-#id for fetching document metadata
 mosip.preregistration.document.fetch.metadata.id=mosip.pre-registration.document.fetch.metadata
-#id for fetching document content
 mosip.preregistration.document.fetch.content.id=mosip.pre-registration.document.fetch.content
-#id for document delete by preregistration id
 mosip.preregistration.document.delete.id=mosip.pre-registration.document.delete
-#id for document delete by document id
 mosip.preregistration.document.delete.specific.id=mosip.pre-registration.document.delete.specific
-
-#Enable or disable the virus scanner(true/false)
+#Enable or disable the virus scanner
 mosip.preregistration.document.scan=true
 
-# ----------- Booking -------------
+# HDFS
+mosip.kernel.fsadapter.hdfs.user-name=prereg
 
-# Determines the Number of days of Availability to be synced from Master Data to Pre-regsistration system
+# Booking
+
+# Number of days of availability to be synced from Master Data to Pre-regsistration system
 preregistration.availability.sync=37
-
-# Determines the Number of days in Appointment availability calendar to be displayed
 preregistration.availability.noOfDays=140
-
-# Determines the number of days in between the Date of Booking and the First Appointment Date to be shown
+# Number of days in between the date of booking and the first appointment date to be shown
 preregistration.booking.offset=2
-
-# Determines the Number of hours before an Appointment date the Individual can Rebook an Appointment
+# Number of hours before an appointment date the individual can rebook an appointment
 preregistration.timespan.rebook=24
-
-# Determines the Number of hours before an Appointment date the Individual can cancel an Appointment 
+# Number of hours before an appointment date the individual can cancel an appointment 
 preregistration.timespan.cancel=24
 
-# To get the country specfic time zone for cancel and re-book
+# For cancel and re-book
 preregistration.country.specific.zoneId=GMT+05:30
 
-# Notification url
 notification.url=${notification.service.env}/${notification.service.version}/${notification.service.contextpath}/notification
-
-# masterdata service URL for fetching registration centers
-regCenter.url=${masterdata.resource.url}/registrationcenters
-
-# Master service URL for fetching registration centers holiday
-holiday.url=${masterdata.resource.url}/getregistrationcenterholidays/
-
-holiday.exceptional.url=${masterdata.resource.url}/exceptionalholidays
-working.day.url=${masterdata.resource.url}/workingdays
 
 
 #id for synching availability data
