--- a/deployment/sandbox-v2/app/roles/prerequisites/console/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/prerequisites/console/tasks/main.yml
@@ -22,6 +22,8 @@
 #    state: present
 #  become: yes
 
+# TODO Install kubectl and transfer admin conf file
+#
 - name: Install openshift
   pip:
     name: openshift
