--- a/deployment/sandbox-v2/app/group_vars/console.yml
+++ b/deployment/sandbox-v2/app/group_vars/console.yml
@@ -1,4 +1,7 @@
+
 ---
+ansible_python_interpreter: /usr/bin/python3
+
 ansible_become_password: puneet  # For commands that require sudo
 
 tmp_dir: '{{playbook_dir}}/tmp/'
