--- a/deployment/sandbox-v2/app/roles/postgres/postgres/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/postgres/postgres/defaults/main.yml
@@ -1,4 +1,5 @@
 postgres_password: postgres
+postgres_name: postgres
 postgres_db: keycloak # Default DB on Postgres
 postgres_user: postgres
 postgres_external_ip: '{{hostvars[groups.kubeworkers[0]].ansible_host}}'  # Any k8s worker node
