--- a/deployment/sandbox-v2/app/roles/postgres/postgres/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/postgres/postgres/defaults/main.yml
@@ -2,8 +2,7 @@ postgres_password: postgres
 postgres_name: postgres
 postgres_db: keycloak # Default DB on Postgres
 postgres_user: postgres
-postgres_external_ip: '{{hostvars[groups.kubeworkers[0]].ansible_host}}'  # Any k8s worker node
-
+postgres_external_ip: '{{hostvars[groups.kubeworkers[0]].ansible_host}}' # Any k8s worker node
 # Permanent storage params
-postgres_local_storage_node: '{{groups.persistent_data_node}}'
+postgres_local_storage_node: '{{(groups.persistent_data_node)[0]}}'
 postgres_local_storage_path: /mnt/mosip_data/postgres
