--- a/deployment/sandbox-v2/app/roles/hdfs/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/hdfs/tasks/main.yml
@@ -1,16 +1,23 @@
 
 # Deploy container 
-#- name: Get yml from template 
-#  template:
-#     src: k8s_hdfs.yml.j2
-#     dest: '{{tmp_dir}}/k8s_hdfs.yml'
-#
-#- name: Deploy on kurbernetes
-#  k8s:
-#    state: present
-#    src: '{{tmp_dir}}/k8s_hdfs.yml'
-#    wait: 'yes'
-#    wait_timeout: '{{docker_wait_time}}'
+- name: Get yml from template 
+  template:
+     src: k8s_hdfs.yml.j2
+     dest: '{{tmp_dir}}/k8s_hdfs.yml'
+
+- name: Deploy on kurbernetes
+  k8s:
+    state: present
+    src: '{{tmp_dir}}/k8s_hdfs.yml'
+    wait: 'yes'
+    wait_timeout: '{{docker_wait_time}}'
+
+- name: Wait for HDFS to come out of safe mode
+  command: 'kubectl exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfsadmin -safemode get"' 
+  register: out 
+  retries: 3 
+  delay: 10
+  until: "'Safe mode is OFF' in out.stdout"
 
 # Create users  
 # First get pod name
@@ -21,10 +28,6 @@
     label_selectors:
       - app = {{hdfs_name}} 
   register: hdfs_pod
-
-- name:
-  debug:
-    msg: '{{hdfs_pod.resources[0].metadata.name}}'
 
 
 # TODO: Persistence of hdfs
