--- a/deployment/sandbox-v2/app/roles/prerequisites/console/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/prerequisites/console/tasks/main.yml
@@ -1,14 +1,3 @@
-
-- name: Ensures tmp directory is present
-  file: 
-    path: '{{tmp_dir}}'
-    state: directory
-
-- name: Ensures log directory is present
-  file: 
-    path: '{{logs_dir}}'
-    state: directory
-
 # TODO: For some reason below link is not working any more.  Check after some time
 #- name: Install psql10 rpm
 #  yum: 
@@ -37,15 +26,24 @@
 - name: Check out mosip/commmons git repo
   git:
     repo: https://github.com/mosip/commons
-    dest: '{{commons_repo_location}}/commons'
+    dest: '{{commons_repo_location}}'
     update: no
     force: no
     
 - name: Check out mosip/pre-registration git repo
   git:
     repo: https://github.com/mosip/pre-registration
-    dest: '{{pre_reg_repo_location}}/pre-registration' 
+    dest: '{{pre_reg_repo_location}}'
     update: no
     force: no
 
+- name: Ensures tmp directory is present
+  file: 
+    path: '{{tmp_dir}}'
+    state: directory
+
+- name: Ensures log directory is present
+  file: 
+    path: '{{logs_dir}}'
+    state: directory
 
