--- a/deployment/sandbox-v2/app/roles/prerequisites/kubenode/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/prerequisites/kubenode/tasks/main.yml
@@ -1,6 +1,5 @@
 - include_vars:
     file: roles/postgres/postgres/defaults/main.yml
-    name: postgres_local_storage_path
 
 - name: Create postgres data folder
   file:
@@ -22,6 +21,8 @@
      force: no
     
 - name: Install git 
+  vars:
+    ansible_python_interpreter: /usr/bin/python2.7 # Needed otherwise ansible not able to install
   yum:
     name: git
     state: present
