--- a/deployment/sandbox-v2/kube/roles/metallb/vars/main.yml
+++ b/deployment/sandbox-v2/kube/roles/metallb/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 metallb_version: v0.8.3
 metallb_yaml_url: "https://raw.githubusercontent.com/google/metallb/{{ metallb_version }}/manifests/metallb.yaml"
-metallb_address_space: 192.168.205.200-192.168.205.210
+metallb_address_space: 10.6.1.125
