--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -1,22 +1,22 @@
 ---
 - hosts: all
-  gather_facts: true
+  gather_facts: false
   roles:
      - {role: ssh, tags: [never, one-time, ssh]}
      - {role: python3, tags: [never, one-time, python3]}
 
 - hosts: console
-  gather_facts: true
+  gather_facts: false
   roles:
      - {role: prerequisites/console, tags: [never, one-time, prerequisites]}
 
 - hosts: kubeworker1
-  gather_facts: true
+  gather_facts: false
   roles: 
     - {role: prerequisites/kubenode, tags: [never, one-time, kubenode]}
 
 - hosts: console
-  gather_facts: true
+  gather_facts: false
   roles:
      # Base MOSIP infra
      - {role: postgres/postgres, tags: postgres}
