--- a/deployment/sandbox-v2/app/roles/nginx/files/nginx.conf
+++ b/deployment/sandbox-v2/app/roles/nginx/files/nginx.conf
@@ -1,16 +1,14 @@
 server {
-    listen       80 default_server;
-    listen       [::]:80 default_server;
-    listen       81; 
-    listen       443 ssl;
-    server_name  mosip-tf.technoforte.co.in;
-    #ssl on;
-    ssl_certificate /etc/letsencrypt/live/mosip-tf.technoforte.co.in/cert.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mosip-tf.technoforte.co.in/privkey.pem;
-    ssl_certificate /etc/letsencrypt/live/mosip-tf.technoforte.co.in/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mosip-tf.technoforte.co.in/privkey.pem;
+    listen       80 ;
+    listen       [::]:80 ;
+    listen       443 default_server ssl;
+    server_name  {{ domain_name }};
+    ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/cert.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem;
     client_max_body_size 20m;
-    add_header 'Access-Control-Allow-Origin' "https://mosip-tf.technoforte.co.in" always;
+    add_header 'Access-Control-Allow-Origin' "https://{{ domain_name }}" always;
     add_header Set-Cookie cip=$remote_addr;
     add_header Set-Cookie chost=$Host;
     error_log /var/log/nginx/error.log debug;
@@ -23,7 +21,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         # Below must match with Kubernetes ingress path for keycloak
-        proxy_pass http://10.6.1.125/keycloak/auth/;
+        proxy_pass http://{{ ingress_ip }}/keycloak/auth/;
         }
 
      location /preregistration/v1/ {
@@ -31,14 +29,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/preregistration/v1/;
+        proxy_pass http://{{ ingress_ip }}/preregistration/v1/;
         }
      location /pre-registration-ui/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/pre-registration-ui/;
+        proxy_pass http://{{ ingress_ip }}/pre-registration-ui/;
         }
 
      location /v1/masterdata/ {
@@ -46,7 +44,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/v1/masterdata/;
+        proxy_pass http://{{ ingress_ip }}/v1/masterdata/;
         }
 
      location /v1/authmanager/ {
@@ -54,7 +52,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/v1/authmanager/;
+        proxy_pass http://{{ ingress_ip }}/v1/authmanager/;
         }
 
      location /v1/applicanttype/ {
@@ -62,7 +60,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://10.6.1.125/v1/applicanttype/;
+        proxy_pass http://{{ ingress_ip }}/v1/applicanttype/;
         }
 
 }
